<resources>
	<string name="app_name">Open arena</string>

	<string name="snackbar_result_null_text">Server is not responding</string>
	<string name="snackbar_result_null_action">Refresh</string>
	<string name="error_content_text">Something wrong</string>
	<string name="empty_content_text">Nothing to show</string>

	<string name="intro_skip">Skip</string>
	<string name="intro_next">Next</string>
	<string name="intro_start">Start</string>

	<string name="leagues_title">Leagues</string>
	<string name="leagues_subtitle">%1$d - %2$d</string>
	<string name="leagues_list_item_matchday">%1$d/%2$d</string>

	<string name="fixtures_matchday">Matchday %1$d</string>
	<string name="fixtures_list_item_result">%1$d : %2$d</string>
	<string name="fixtures_list_item_header_today">Today</string>
	<string name="fixtures_list_item_header_tomorrow">Tomorrow</string>

	<string name="fixture_info_title">Details</string>
	<string name="fixture_info_result">%1$d : %2$d</string>
	<string name="fixture_info_empty_result">- : -</string>
	<string name="fixture_info_head2head">Head2head</string>
	<string name="fixture_info_winrait">%1$d%% / %2$d%%</string>

	<string name="scores_against_difference">%1$d/%2$d</string>
	<string name="scores_head_team">Team</string>
	<string name="scores_head_number">№</string>
	<string name="scores_head_played_games">PG</string>
	<string name="scores_head_goals">G</string>
	<string name="scores_head_against_difference">A/D</string>
	<string name="scores_head_points">P</string>
	<string name="scores_sort_dialog_title">Categories</string>

	<string name="team_button_fixtures">Upcoming matches</string>
	<string name="team_button_players">Players</string>

	<string name="about_title">About</string>
	<string name="about_entry">Hello! This application used the <b>Open football API</b></string>
	<string name="about_links">And this has links on my profiles, thanks, Taras.</string>
	<string name="about_toast_action_with_ad">Thanks for coffee (:</string>
	<string name="about_version">Build</string>

	<string name="option_settings">Settings</string>
	<string name="option_about">About</string>
	<string name="option_share">Share</string>
	<string name="option_current">Current matchday</string>
	<string name="option_notify">Notify</string>
	<string name="option_sort">Sort</string>
	<string name="option_score_table">Score table</string>

	<string name="players_title">Players</string>
	<string name="player_info_nationality"><b>Nationality:</b> %1$s</string>
	<string name="player_info_position"><b>Position:</b> %1$s</string>
	<string name="player_info_market_value"><b>Market value:</b> %1$s</string>
	<string name="player_info_contract_until"><b>Contract until:</b> %1$s</string>

	<string name="context_head_select_matchday">Select matchday</string>
	<string name="context_fixture_head">Select action</string>
	<string name="context_fixture_notification">Notification</string>

	<string name="dialog_exit_title">Do you want to exit?</string>
	<string name="dialog_exit_positive">Yes</string>
	<string name="dialog_exit_negative">No</string>

	<string name="notification_fixture_ticker">Match will start soon</string>
	<string name="notification_fixture_title">Begin at %1$s</string>
	<string name="notification_fixture_text">%1$s vs %2$s</string>

	<string name="share_fixture_home_win">(%1$s) \"%2$s [%4$d:%5$d] %3$s\" - %2$s win</string>
	<string name="share_fixture_away_win">(%1$s) \"%2$s [%4$d:%5$d] %3$s\" - %3$s win</string>
	<string name="share_fixture_draw">(%1$s) \"%2$s [%4$d:%5$d] %3$s\" - draw</string>
	<string name="share_fixture_timed">\"%2$s vs %3$s\" begin at %1$s</string>

	<string name="share_fixtures_header">### %1$s\n## Matchday: %2$d</string>
	<string name="share_fixtures_separator_today"># Today</string>
	<string name="share_fixtures_separator_tomorrow"># Tomorrow</string>
	<string name="share_fixtures_separator_with_date"># %1$s</string>
	<string name="share_fixtures_finished">%1$s [%3$d:%4$d] %2$s</string>
	<string name="share_fixtures_timed">%1$s (%3$s) %2$s</string>

	<string name="share_scores_header">### %1$s (%2$d)\nRank|Points|Team</string>
	<string name="share_scores_item">%1$d | %2$d | %3$s</string>

	<string name="share_players_header">### %1$s (%2$s)\n## Players</string>
	<string name="share_players_item">%1$d | %2$s</string>

	<string name="share_team_fixtures_header">### %1$s (%2$s)\n## Upcoming</string>
	<string name="share_team_fixtures_item">%1$s (%3$s) %2$s</string>

	<!-- Tutorial -->
	<string name="intro_page1_title">On pulse</string>
	<string name="intro_page1_subtitle">Get information for upcoming events</string>
	<string name="intro_page2_title">Sharing</string>
	<string name="intro_page2_subtitle">Share all with friends</string>
	<string name="intro_page3_title">Get started!</string>

	<!-- CONST resources -->
	<string name="api_key">16c130d43d5543bfac04ffef8b3da068</string>
	<string name="api_response_control_mini">minified</string>
	<string name="api_response_control_full">full</string>

	<string name="banner_ad_unit_id">s</string>

	<string name="about_linkedin">LinkedIn</string>
	<string name="about_github">GitHub</string>
	<string name="about_facebook">Facebook</string>
	<string name="about_google_plus">Google+</string>
	<string name="about_google_play">Google play</string>
	<string name="link_football_api">http://api.football-data.org</string>
	<string name="link_linkedin">https://www.linkedin.com/in/tarikw</string>
	<string name="link_github">https://github.com/TarikW</string>
	<string name="link_facebook">https://www.facebook.com/social.TarikW</string>
	<string name="link_google_plus">https://plus.google.com/105322723020726409354</string>
	<string name="link_google_play">https://play.google.com/store/apps/developer?id=TarikW</string>
</resources>
